[gd_scene load_steps=34 format=3 uid="uid://b5xdqvpiuxyp6"]

[ext_resource type="Script" path="res://scenes/enemies/nemean-lion/nemean_lion.gd" id="1_tmex5"]
[ext_resource type="Shader" uid="uid://4l703uteubdf" path="res://shaders/enemy-hit-flash.tres" id="2_prj0e"]
[ext_resource type="Texture2D" uid="uid://cqk2twwg6cup5" path="res://assets/Enemies/nemean-lion-sprite/lion_idle.png" id="3_lshe6"]
[ext_resource type="Texture2D" uid="uid://dxslxxbaiwpj8" path="res://assets/Enemies/nemean-lion-sprite/lion_attack.png" id="4_eyyts"]
[ext_resource type="Texture2D" uid="uid://ml4pq2ldwr8a" path="res://assets/Enemies/nemean-lion-sprite/lion_attack_2.png" id="5_rj08w"]
[ext_resource type="Texture2D" uid="uid://bj3uv87c10vru" path="res://assets/Enemies/nemean-lion-sprite/lion_death.png" id="6_molhx"]
[ext_resource type="Texture2D" uid="uid://yhqrq6h87n38" path="res://assets/Enemies/nemean-lion-sprite/lion_hit.png" id="7_qyyl1"]
[ext_resource type="Texture2D" uid="uid://cq56ktcbava3f" path="res://assets/Enemies/nemean-lion-sprite/lion_run.png" id="8_kfboo"]
[ext_resource type="Script" path="res://fsm/base-state/state-machine.gd" id="9_ubbte"]
[ext_resource type="Script" path="res://fsm/enemy-states/enemy-wander.gd" id="10_so6ia"]
[ext_resource type="Script" path="res://fsm/special states/bird/boss_follow.gd" id="11_krmmn"]
[ext_resource type="Script" path="res://fsm/special states/bird/boss_attack.gd" id="12_uh2nk"]
[ext_resource type="Script" path="res://fsm/enemy-states/enemy-hit.gd" id="13_aspm3"]
[ext_resource type="Script" path="res://fsm/enemy-states/enemy-death.gd" id="14_qne6u"]
[ext_resource type="PackedScene" uid="uid://tiwuf42urbrg" path="res://scenes/components/healthcomp/enemy/enemy_health_comp.tscn" id="15_t1xpt"]
[ext_resource type="PackedScene" uid="uid://dfnl3gfcu8o67" path="res://scenes/components/HP-bar/enemy/enemy_hp_bar.tscn" id="16_576jm"]
[ext_resource type="FontFile" uid="uid://dxfyisbd2ylri" path="res://assets/Fonts/joystix monospace.otf" id="17_uekiu"]
[ext_resource type="Script" path="res://scenes/components/hitbox/hitbox.gd" id="18_mh746"]
[ext_resource type="Script" path="res://scenes/components/attackcomp/attack_component.gd" id="19_pe2mp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2wsb8"]
shader = ExtResource("2_prj0e")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_rhnh4"]
resource_name = "lion-attack1"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_eyyts")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EnemyHealthComp/Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_s1hc4"]
resource_name = "lion-attack2"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_rj08w")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EnemyHealthComp/Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_tkqcw"]
resource_name = "lion-death"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_molhx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"lion_defeated"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EnemyHealthComp/Hurtbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_o7xb6"]
resource_name = "lion-hit"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_qyyl1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_53qvq"]
resource_name = "lion-idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_lshe6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_twnc8"]
resource_name = "lion-run"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_kfboo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7fn3d"]
_data = {
"lion-attack1": SubResource("Animation_rhnh4"),
"lion-attack2": SubResource("Animation_s1hc4"),
"lion-death": SubResource("Animation_tkqcw"),
"lion-hit": SubResource("Animation_o7xb6"),
"lion-idle": SubResource("Animation_53qvq"),
"lion-run": SubResource("Animation_twnc8")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0vppp"]
radius = 13.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_816a8"]
radius = 11.0
height = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eqtdf"]

[sub_resource type="Animation" id="Animation_6hcam"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_86xlx"]
resource_name = "hit-flash"
length = 0.15
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ffg0m"]
_data = {
"RESET": SubResource("Animation_6hcam"),
"hit-flash": SubResource("Animation_86xlx")
}

[node name="NemeanLion" type="CharacterBody2D" node_paths=PackedStringArray("lion_hp_comp")]
script = ExtResource("1_tmex5")
lion_hp_comp = NodePath("EnemyHealthComp")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_2wsb8")
texture = ExtResource("3_lshe6")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7fn3d")
}

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(-2, 13)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0vppp")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("9_ubbte")
initial_state = NodePath("EnemyWander")

[node name="EnemyWander" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "enemy_health_comp")]
script = ExtResource("10_so6ia")
actor = NodePath("../..")
enemy_health_comp = NodePath("../../EnemyHealthComp")

[node name="EnemyFollow" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "enemy_health_comp")]
script = ExtResource("11_krmmn")
actor = NodePath("../..")
move_speed = 40.0
enemy_health_comp = NodePath("../../EnemyHealthComp")

[node name="EnemyAttack" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "enemy_health_comp", "timer")]
script = ExtResource("12_uh2nk")
actor = NodePath("../..")
enemy_health_comp = NodePath("../../EnemyHealthComp")
timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="StateMachine/EnemyAttack"]

[node name="EnemyHit" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "enemy_health", "attack")]
script = ExtResource("13_aspm3")
actor = NodePath("../..")
enemy_health = NodePath("../../EnemyHealthComp")
attack = NodePath("../../EnemyHealthComp/AttackComponent")

[node name="EnemyDeath" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "enemy_health_comp")]
script = ExtResource("14_qne6u")
actor = NodePath("../..")
enemy_health_comp = NodePath("../../EnemyHealthComp")

[node name="EnemyHealthComp" parent="." node_paths=PackedStringArray("enemy_hp_bar", "anim_effects", "dmg_num_pos") instance=ExtResource("15_t1xpt")]
enemy_hp_bar = NodePath("HPUI/EnemyHPbar")
anim_effects = NodePath("../AnimEffects")
dmg_num_pos = NodePath("../DmgNumPos")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHealthComp/Hurtbox" index="0"]
position = Vector2(-2, 13)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_816a8")
debug_color = Color(0.986348, 0, 0.324526, 0.42)

[node name="HPUI" type="CanvasLayer" parent="EnemyHealthComp"]

[node name="EnemyHPbar" parent="EnemyHealthComp/HPUI" instance=ExtResource("16_576jm")]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -624.0
offset_top = -176.0
offset_right = 624.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="EnemyHealthComp/HPUI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = 277.0
offset_right = 218.5
offset_bottom = 335.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("17_uekiu")
theme_override_font_sizes/font_size = 48
text = "NEMEAN LION"
horizontal_alignment = 1

[node name="Hitbox" type="Area2D" parent="EnemyHealthComp"]
script = ExtResource("18_mh746")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHealthComp/Hitbox"]
position = Vector2(29, 17)
shape = SubResource("CircleShape2D_eqtdf")
disabled = true
debug_color = Color(0, 0.648593, 0.175592, 0.42)

[node name="AttackComponent" type="Node2D" parent="EnemyHealthComp"]
script = ExtResource("19_pe2mp")
base_dmg = 25

[node name="DmgNumPos" type="Node2D" parent="."]

[node name="AnimEffects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ffg0m")
}

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(4.76837e-07, 11.5)
scale = Vector2(0.4, 1.45)

[connection signal="timeout" from="StateMachine/EnemyAttack/Timer" to="StateMachine/EnemyAttack" method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]

[editable path="EnemyHealthComp"]
